--- a/templates/website/index.html
+++ b/templates/website/index.html
@@ -1,12 +1,16 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
+    <link rel="stylesheet" href="{% static 'css/test.css' %}">
 </head>
 <body>
     <h1>This is the Home Page</h1>
     <p>Hello Omid</p>
 </body>
+
 </html>
