--- a/templates/blog/blog-home.html
+++ b/templates/blog/blog-home.html
@@ -2,6 +2,8 @@
 
 {% load static %}
 
+{% load blog_tags %}
+
 {% block content %}
 
 <!-- start banner Area -->
@@ -157,11 +159,11 @@
 
 					{% include 'blog/blog-writer.html' %}
 
-					{% include 'blog/blog-popular-posts.html' %}
+					{% latestposts %}
 					
 					{% include 'blog/blog-ads.html' %}
 
-					{% include 'blog/blog-category.html' %}
+					{% postcategories %}
 
 					{% include 'blog/blog-newsletter.html' %}
 					
