--- a/templates/blog/blog-single.html
+++ b/templates/blog/blog-single.html
@@ -3,7 +3,7 @@
 {% load static %}
 
 {% load blog_tags %}
-
+{% load humanize %}
 {% block content %}
 
 <!-- start banner Area -->
@@ -43,14 +43,16 @@
 							<li><a href="#">Lifestyle</a></li>
 						</ul>
 						<div class="user-details row">
-							<p class="user-name col-lg-12 col-md-12 col-6"><a href="#">{{post.author.get_full_name}}</a> <span
-									class="lnr lnr-user"></span></p>
-							<p class="date col-lg-12 col-md-12 col-6"><a href="#">{{post.published_date | date:"d M Y"}}</a> <span
-									class="lnr lnr-calendar-full"></span></p>
+							<p class="user-name col-lg-12 col-md-12 col-6"><a href="#">{{post.author.get_full_name}}</a>
+								<span class="lnr lnr-user"></span>
+							</p>
+							<p class="date col-lg-12 col-md-12 col-6"><a href="#">{{post.published_date | date:"d M
+									Y"}}</a> <span class="lnr lnr-calendar-full"></span></p>
 							<p class="view col-lg-12 col-md-12 col-6"><a href="#">1.2M Views</a> <span
 									class="lnr lnr-eye"></span></p>
-							<p class="comments col-lg-12 col-md-12 col-6"><a href="#">06 Comments</a> <span
-									class="lnr lnr-bubble"></span></p>
+							<p class="comments col-lg-12 col-md-12 col-6"><a href="#">{{comments|length}} Comments</a>
+								<span class="lnr lnr-bubble"></span>
+							</p>
 							<ul class="social-links col-lg-12 col-md-12 col-6">
 								<li><a href="#"><i class="fa fa-facebook"></i></a></li>
 								<li><a href="#"><i class="fa fa-twitter"></i></a></li>
@@ -102,118 +104,51 @@
 					</div>
 				</div>
 				<div class="comments-area">
-					<h4>05 Comments</h4>
+					<h4>{{comments|length}} Comments</h4>
+
 					<div class="comment-list">
+						{% for comment in comments %}
 						<div class="single-comment justify-content-between d-flex">
 							<div class="user justify-content-between d-flex">
 								<div class="thumb">
 									<img src="{% static 'img/blog/c1.jpg' %}" alt="">
 								</div>
 								<div class="desc">
-									<h5><a href="#">Emilly Blunt</a></h5>
-									<p class="date">December 4, 2017 at 3:12 pm </p>
+									<h5><a href="#">{{comment.name}}</a></h5>
+									<p class="date">{{comment.created_date|naturalday}} </p>
 									<p class="comment">
-										Never say goodbye till the end comes!
+										{{comment.message}}
 									</p>
 								</div>
 							</div>
+							<!--
 							<div class="reply-btn">
 								<a href="" class="btn-reply text-uppercase">reply</a>
 							</div>
+						-->
 						</div>
-					</div>
-					<div class="comment-list left-padding">
-						<div class="single-comment justify-content-between d-flex">
-							<div class="user justify-content-between d-flex">
-								<div class="thumb">
-									<img src="{% static 'img/blog/c2.jpg' %}" alt="">
-								</div>
-								<div class="desc">
-									<h5><a href="#">Elsie Cunningham</a></h5>
-									<p class="date">December 4, 2017 at 3:12 pm </p>
-									<p class="comment">
-										Never say goodbye till the end comes!
-									</p>
-								</div>
-							</div>
-							<div class="reply-btn">
-								<a href="" class="btn-reply text-uppercase">reply</a>
-							</div>
-						</div>
-					</div>
-					<div class="comment-list left-padding">
-						<div class="single-comment justify-content-between d-flex">
-							<div class="user justify-content-between d-flex">
-								<div class="thumb">
-									<img src="{% static 'img/blog/c3.jpg' %}" alt="">
-								</div>
-								<div class="desc">
-									<h5><a href="#">Annie Stephens</a></h5>
-									<p class="date">December 4, 2017 at 3:12 pm </p>
-									<p class="comment">
-										Never say goodbye till the end comes!
-									</p>
-								</div>
-							</div>
-							<div class="reply-btn">
-								<a href="" class="btn-reply text-uppercase">reply</a>
-							</div>
-						</div>
-					</div>
-					<div class="comment-list">
-						<div class="single-comment justify-content-between d-flex">
-							<div class="user justify-content-between d-flex">
-								<div class="thumb">
-									<img src="{% static 'img/blog/c4.jpg' %}" alt="">
-								</div>
-								<div class="desc">
-									<h5><a href="#">Maria Luna</a></h5>
-									<p class="date">December 4, 2017 at 3:12 pm </p>
-									<p class="comment">
-										Never say goodbye till the end comes!
-									</p>
-								</div>
-							</div>
-							<div class="reply-btn">
-								<a href="" class="btn-reply text-uppercase">reply</a>
-							</div>
-						</div>
-					</div>
-					<div class="comment-list">
-						<div class="single-comment justify-content-between d-flex">
-							<div class="user justify-content-between d-flex">
-								<div class="thumb">
-									<img src="{% static 'img/blog/c5.jpg' %}" alt="">
-								</div>
-								<div class="desc">
-									<h5><a href="#">Ina Hayes</a></h5>
-									<p class="date">December 4, 2017 at 3:12 pm </p>
-									<p class="comment">
-										Never say goodbye till the end comes!
-									</p>
-								</div>
-							</div>
-							<div class="reply-btn">
-								<a href="" class="btn-reply text-uppercase">reply</a>
-							</div>
-						</div>
+						{% empty %}
+						<p> There is no comments yet. Be the first one! </p>
+						{% endfor %}
 					</div>
 				</div>
 				<div class="comment-form">
 					<h4>Leave a Comment</h4>
-					<form>
+					<form method="post" , action="{% url 'blog:single' pid=post.id %}">
+						{% csrf_token %}
+						<input type="hidden" name="post" value={{post.id}}>
 						<div class="form-group form-inline">
 							<div class="form-group col-lg-6 col-md-12 name">
-								<input type="text" class="form-control" id="name" placeholder="Enter Name"
+								<input type="text" class="form-control" name="name" placeholder="Enter Name"
 									onfocus="this.placeholder = ''" onblur="this.placeholder = 'Enter Name'">
 							</div>
 							<div class="form-group col-lg-6 col-md-12 email">
-								<input type="email" class="form-control" id="email" placeholder="Enter email address"
+								<input type="email" class="form-control" name="email" placeholder="Enter email address"
 									onfocus="this.placeholder = ''" onblur="this.placeholder = 'Enter email address'">
 							</div>
 						</div>
 						<div class="form-group">
-							<input type="text" class="form-control" id="subject" placeholder="Subject"
+							<input type="text" class="form-control" name="subject" placeholder="Subject"
 								onfocus="this.placeholder = ''" onblur="this.placeholder = 'Subject'">
 						</div>
 						<div class="form-group">
@@ -221,13 +156,37 @@
 								onfocus="this.placeholder = ''" onblur="this.placeholder = 'Messege'"
 								required=""></textarea>
 						</div>
-						<a href="#" class="primary-btn text-uppercase">Post Comment</a>
+						<button type="submit" class="primary-btn text-uppercase">Post Comment</button>
 					</form>
+					{% if messages %}
+					{% for message in messages %}
+					<div class="alert {% if message.tags %} alert-{{ message.tags }}{% endif %}">{{ message|safe }}
+					</div>
+					{% endfor %}
+					{% endif %}
+
+					{% if form.errors %}
+					<div class="alert alert-error">
+						<h4>Please fix the following errors</h4>
+						<ul>
+							{% for field in form %}
+							{% if field.errors %}
+							{% for error in field.errors %}
+							<li><a href="#id_{{ field.name }}" class="error">{{ error|escape }}</a></li>
+							{% endfor %}
+							{% endif %}
+							{% endfor %}
+						</ul>
+						{% if form.non_field_errors %}
+						{{ form.non_field_errors }}
+						{% endif %}
+					</div>
+					{% endif %}
 				</div>
 			</div>
 			<div class="col-lg-4 sidebar-widgets">
 				<div class="widget-wrap">
-					
+
 					{% include 'blog/blog-search.html' %}
 
 					{% include 'blog/blog-writer.html' %}
@@ -237,11 +196,11 @@
 					{% include 'blog/blog-ads.html' %}
 
 					{% include 'blog/blog-category.html' %}
-					
+
 					{% include 'blog/blog-newsletter.html' %}
 
 					{% include 'blog/blog-tags.html' %}
-					
+
 				</div>
 			</div>
 		</div>
